WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
121725
Rapidly loading pages can result in !needsLayout() assertions in FrameView::paintContents() and RenderView::paint()
https://bugs.webkit.org/show_bug.cgi?id=121725
Summary
Rapidly loading pages can result in !needsLayout() assertions in FrameView::p...
Simon Fraser (smfr)
Reported
2013-09-20 16:14:57 PDT
Rapidly loading pages can result in !needsLayout() assertions in FrameView::paintContents() and RenderView::paint()
Attachments
Patch
(27.26 KB, patch)
2013-09-20 16:54 PDT
,
Simon Fraser (smfr)
dino
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2013-09-20 16:54:42 PDT
Created
attachment 212243
[details]
Patch
Simon Fraser (smfr)
Comment 2
2013-09-20 16:55:18 PDT
<
rdar://problem/13982161
>
Simon Fraser (smfr)
Comment 3
2013-09-20 17:07:43 PDT
Comment on
attachment 212243
[details]
Patch This patch causes odd behavior on zooming.
Simon Fraser (smfr)
Comment 4
2013-09-22 08:49:33 PDT
Comment on
attachment 212243
[details]
Patch This patch is good. The scale issue is a regression from
r155998
(
bug 121765
).
Simon Fraser (smfr)
Comment 5
2013-09-23 13:42:32 PDT
https://trac.webkit.org/r156291
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug