Source/WebCore/platform/graphics/TiledBacking.h
@@ -70,6 +70,7 @@ public:
 
     virtual IntSize tileSize() const = 0;
 
+    virtual void revalidateTiles() = 0;
     virtual void forceRepaint() = 0;
 
     virtual void setScrollingPerformanceLoggingEnabled(bool) = 0;
